--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.flightapplication"
+        applicationId "com.example.kafeinweatherapp"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -21,6 +25,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,7 +45,60 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.databinding:databinding-runtime:7.2.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Easy permission
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
+    //Navigation Implementation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:3.7.2"
+
+    //Dots indicator
+    implementation "com.tbuonomo:dotsindicator:4.2"
+
+    //View Pager 2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //retrofit and gson converter implementation
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    //Dagger Implemetations
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
+
+    //ohhttp
+    implementation "com.squareup.okhttp3:okhttp"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha03"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // Google Maps Location Services
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+
+
+
+}
+kapt {
+    correctErrorTypes true
 }
