--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,11 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.2.2"
     implementation "com.google.code.gson:gson:2.8.6"
 
+    testImplementation 'com.nhaarman:mockito-kotlin:1.5.0'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+
 
 
 
